# zkregex

./: Cargo.toml  README.md
src/: constants.rs  dfa.rs  main.rs  regex.rs
