[package]
name = "zkregex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
halo2_proofs = { git = "https://github.com/scroll-tech/halo2", branch="develop" }
regex-automata = { git = "https://github.com/alannotnerd/regex" }
